# Code-Agent

./: .dockerignore  .env_examole  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  hello.py  langgraph.json  pyproject.toml  pyrefly.toml
.chainlit/: config.toml
.github/workflows/: teste.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/: README.md  app_chainlit.py  app_code_streamlit.py  app_fastapi.py  graph_cli.py
notebooks/: criando_agente_codificacao.ipynb  deep_agent_langchain.ipynb  embeddins.ipynb  enable_human_intervention.ipynb  examples_agentes_codigos.ipynb  nvidia_ai_endpoints.ipynb  plan-and-execute.ipynb  pydantic_fire.ipynb  requirements_resolved.txt
src/code_agent/: __init__.py
src/code_agent/build_graph/: graph.py
src/code_agent/get_routem_llm/: get_llm.py  routem_llm.py
src/code_agent/nodes/: node_codes.py  node_python.py  node_return_message.py  node_search.py  node_supervisor.py  should_continue.py
src/code_agent/prompts/: prompts.py
src/code_agent/states_outputs/: output_structured.py  states.py
src/code_agent/tools/: think_tavily.py
tests/: conftest.py  test_graph_builder.py  test_node_code.py  test_node_search.py  test_node_supervisor.py  test_python_repl.py  test_should_continue.py
