[project]
name = "agentecodificaolanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chainlit>=2.8.1",
    "fastapi[standard]>=0.116.2",
    "groq>=0.31.0",
    "hydra-core>=1.3.2",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-nvidia-ai-endpoints>=0.3.18",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "logfire>=4.4.0",
    "pydantic-ai>=1.0.1",
    "streamlit>=1.50.0",
    "tavily-python>=0.7.12",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "ruff==0.9.6",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
    "black==25.1.0",
    "pylint>=3.3.8",
    "ruff>=0.9.6",
    "pyrefly>=0.34.0",
    "pyright>=1.1.405",
]

[build-system]
requires = ["setuptools>=77.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["code_agent"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
target-version = "py310"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 100
max-line-length = 500
#ignore-one-line-docstrings = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]

[tool.pyrefly]
permissive-ignores = true
